# arc-prize

./: .gitignore  README.md  analyze_eval.py  dsl_v2.py  pyproject.toml  test_dsl.py
.github/workflows/: ci.yml
notebooks/: arc_combined_winner.ipynb  arc_grand_prize.ipynb  arc_pathfinder.ipynb  arc_pathfinder_results_01.ipynb  arc_pathfinder_results_02.ipynb  generate_combined_notebook.py  notebook0b5e4d663c.ipynb
src/arc_prize/: __init__.py  adversarial.py  augment.py  data.py  decoder.py  encoder.py  evaluate.py  fuzzer.py  geometric.py  grid.py  solver.py  submit.py
src/arc_prize/combined/: __init__.py  config.py  dsl_solver.py  neural_solver.py  orchestrator.py  repair.py  voting.py
tests/: test_combined.py  test_decoder.py  test_encoder.py  test_evaluate.py  test_fuzzer.py  test_geometric.py  test_grid.py
