[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-prize"
version = "0.1.0"
description = "ARC-AGI-2 solver using geometric embeddings and adversarial structure probing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Andrew H. Bond"},
]
keywords = ["arc-agi", "abstract-reasoning", "geometric-embeddings", "adversarial-probing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "arckit>=1.0.0",
    "batch-probe>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["arc_prize"]

[tool.coverage.run]
source = ["arc_prize"]

[tool.coverage.report]
exclude_lines = ["if __name__", "pragma: no cover"]
